packages/typ/tests/fixtures/diagnostics/0212_adt_recursive_list_payload_mismatch_08.ml.infer.expected
File "0212_adt_recursive_list_payload_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0212_adt_recursive_list_payload_mismatch_08 is not a valid module name.

File "0212_adt_recursive_list_payload_mismatch_08.ml", line 2, characters 39-43:
2 | let _ : int mylist_theta = Cons_theta (true, Nil_theta)
                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
